--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ AntropyGameFiles/[Bb]uild/
 AntropyGameFiles/[Bb]uilds/
 AntropyGameFiles/[Ll]ogs/
 AntropyGameFiles/[Mm]emoryCaptures/
+AntropyGameFiles/[Uu]ser[Ss]ettings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
@@ -57,3 +58,4 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
